# pixel-art-generator

./: .gitignore  pyproject.toml  setup.sh
config/: training.yaml
output/flux-pixel-art-lora/final_lora/: adapter_config.json
src/: dataset.py  generate.py  prepare_dataset.py  train.py
